# opencode-github-copilot-switcher

./: .gitignore  PROMPT.md  README.md  README_ja.md  README_zh.md  fix-react.js  fix3.js  fix4.js  test-date.js
.github/workflows/: release.yml
opencode-github-switcher/: index.html  package-lock.json  package.json  test-date.mjs
opencode-github-switcher/src/: App.jsx  i18n.js
opencode-github-switcher/src-tauri/: Cargo.toml  tauri.conf.json
opencode-github-switcher/src-tauri/icons/: icon.icns
opencode-github-switcher/src-tauri/src/: auth_config.rs  commands.rs  database.rs  error.rs  github_oauth.rs  lib.rs  main.rs  models.rs  provider_service.rs  state.rs
