[package]
name = "opencode-github-switcher"
version = "0.1.6"
description = "A Tauri App for OpenCode GitHub Copilot Switcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.12", features = ["json"] }
dirs-next = "2"
uuid = { version = "1.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tauri-plugin-shell = "2.0.0"
